--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -3,8 +3,12 @@ name: Lint Code Base
 on:
   push:
     branches: [ main ]
+    paths:
+      - '**.py'
   pull_request:
     branches: [ main ]
+    paths:
+      - '**.py'
 
 jobs:
   build:
@@ -19,7 +23,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: '3.x'  # Specify the Python version you are using
+        python-version: '3.x'
 
     - name: Install Dependencies
       run: |
@@ -28,9 +32,10 @@ jobs:
 
     - name: Get changed Python files
       run: |
-        echo "Base SHA: ${{ github.event.before }}"
+        base_sha=$(git merge-base ${{ github.event.pull_request.base.sha || github.base_ref }} ${{ github.sha }})
+        echo "Base SHA: $base_sha"
         echo "Head SHA: ${{ github.sha }}"
-        changed_files=$(git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep '\.py$' || echo "")
+        changed_files=$(git diff --name-only $base_sha ${{ github.sha }} | grep '\.py$' || echo "")
         echo "Changed Python files: $changed_files"
         if [ -z "$changed_files" ]; then
           echo "No Python files changed"
@@ -58,7 +63,7 @@ jobs:
         github-token: ${{secrets.GITHUB_TOKEN}}
         script: |
           const output = `Flake8 Lint Results:\n\`\`\`\n${{ env.flake8_output }}\n\`\`\``;
-          const issue_number = context.issue.number || context.payload.pull_request.number;
+          const issue_number = context.payload.pull_request ? context.payload.pull_request.number : context.issue.number;
           github.issues.createComment({
             issue_number: issue_number,
             owner: context.repo.owner,
