--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -1,22 +1,17 @@
-name: Lint Code Base
+name: Lint Code Base on PR
 
 on:
-  push:
-    branches: [ main ]
-    paths:
-      - '**.py'
   pull_request:
     branches: [ main ]
-    paths:
-      - '**.py'
 
 jobs:
-  build:
-    name: Lint
+  lint:
+    name: Lint Changed Files
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout Repository
+      uses: actions/checkout@v2
       with:
         fetch-depth: 0  # Fetches all history for all branches and tags
 
@@ -25,49 +20,30 @@ jobs:
       with:
         python-version: '3.x'
 
-    - name: Install Dependencies
+    - name: Install Linter (Flake8)
       run: |
         python -m pip install --upgrade pip
         pip install flake8
 
-    - name: Get changed Python files
+    - name: Get Changed Files
+      id: files
       run: |
-        base_sha=$(git merge-base ${{ github.event.pull_request.base.sha || github.base_ref }} ${{ github.sha }})
-        echo "Base SHA: $base_sha"
-        echo "Head SHA: ${{ github.sha }}"
-        changed_files=$(git diff --name-only $base_sha ${{ github.sha }} | grep '\.py$' || echo "")
+        echo "PR base SHA: ${{ github.event.pull_request.base.sha }}"
+        echo "PR head SHA: ${{ github.sha }}"
+        changed_files=$(git diff --name-only ${{ github.event.pull_request.base.sha }} ${{ github.sha }} | grep '\.py$' || echo "")
         echo "Changed Python files: $changed_files"
         if [ -z "$changed_files" ]; then
           echo "No Python files changed"
           exit 0
         fi
-        echo "changed_files=$changed_files" >> $GITHUB_ENV
+        echo "::set-output name=files::${changed_files}"
 
-    - name: Run Flake8 on changed files
+    - name: Run Linter on Changed Files
       run: |
+        changed_files="${{ steps.files.outputs.files }}"
         if [ -n "$changed_files" ]; then
           echo "Running Flake8 on changed files:"
           echo $changed_files
-          flake8_output=$(flake8 $changed_files --count --select=E9,F63,F7,F82 --show-source --statistics)
-          echo "flake8_output<<EOF" >> $GITHUB_ENV
-          echo "$flake8_output" >> $GITHUB_ENV
-          echo "EOF" >> $GITHUB_ENV
+          flake8 $changed_files
         else
           echo "No Python files changed"
-        fi
-
-    - name: Post results as a comment
-      if: env.flake8_output
-      uses: actions/github-script@v3
-      with:
-        github-token: ${{secrets.GITHUB_TOKEN}}
-        script: |
-          const output = `Flake8 Lint Results:\n\`\`\`\n${{ env.flake8_output }}\n\`\`\``;
-          const issue_number = context.payload.pull_request ? context.payload.pull_request.number : context.issue.number;
-          github.issues.createComment({
-            issue_number: issue_number,
-            owner: context.repo.owner,
-            repo: context.repo.repo,
-            body: output
-          });
-    
