--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -1,36 +1,49 @@
-name: Lint Code Base
+name: Lint Code Base on PR
 
 on:
-  push:
-    branches: [ main ]
   pull_request:
     branches: [ main ]
 
 jobs:
-  build:
-    name: Lint
+  lint:
+    name: Lint Changed Files
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout Repository
+      uses: actions/checkout@v2
       with:
-        fetch-depth: 0  # Fetches all history for all branches and tags
+        fetch-depth: 0
 
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: '3.x'  # Specify the Python version you are using
+        python-version: '3.x'
 
-    - name: Install Dependencies
+    - name: Install Linter (Flake8)
       run: |
         python -m pip install --upgrade pip
         pip install flake8
 
-    - name: Get changed Python files
+    - name: Fetch PR Base and Head SHAs
+      id: pr_info
+      uses: actions/github-script@v3
+      with:
+        script: |
+          const pr = await github.pulls.get({
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            pull_number: context.issue.number
+          });
+          return { base_sha: pr.data.base.sha, head_sha: pr.data.head.sha };
+
+    - name: Get Changed Files
       run: |
-        echo "Base SHA: ${{ github.event.before }}"
-        echo "Head SHA: ${{ github.sha }}"
-        changed_files=$(git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep '\.py$' || echo "")
+        base_sha="${{ steps.pr_info.outputs.base_sha }}"
+        head_sha="${{ steps.pr_info.outputs.head_sha }}"
+        echo "Base SHA: $base_sha"
+        echo "Head SHA: $head_sha"
+        changed_files=$(git diff --name-only $base_sha $head_sha | grep '\.py$' || echo "")
         echo "Changed Python files: $changed_files"
         if [ -z "$changed_files" ]; then
           echo "No Python files changed"
@@ -38,41 +51,11 @@ jobs:
         fi
         echo "changed_files=$changed_files" >> $GITHUB_ENV
 
-    - name: Run Flake8 on changed files
+    - name: Run Linter on Changed Files
       run: |
         if [ -n "$changed_files" ]; then
           echo "Running Flake8 on changed files:"
           echo $changed_files
-          flake8_output=$(flake8 $changed_files --count --select=E9,F63,F7,F82 --show-source --statistics)
-          echo "flake8_output<<EOF" >> $GITHUB_ENV
-          echo "$flake8_output" >> $GITHUB_ENV
-          echo "EOF" >> $GITHUB_ENV
+          flake8 $changed_files
         else
           echo "No Python files changed"
-        fi
-    - name: Post results as a comment
-      if: env.flake8_output
-      uses: actions/github-script@v3
-      with:
-        github-token: ${{secrets.GITHUB_TOKEN}}
-        script: |
-          const output = `Flake8 Lint Results:\n\`\`\`\n${{ env.flake8_output }}\n\`\`\``;
-          let issue_number;
-    
-          if (context.payload.pull_request) {
-            issue_number = context.payload.pull_request.number;
-          } else if (context.issue) {
-            issue_number = context.issue.number;
-          }
-    
-          if (issue_number) {
-            github.issues.createComment({
-              issue_number: issue_number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              body: output
-            });
-          } else {
-            console.log("No issue or pull request context available for commenting.");
-          }
-    
